--- a/f1.html
+++ b/f1.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color: #052407; color: white;">
-    <h1>神秘森林</h1>
-    <h2>- 付费体验正式内容 -</h2>
+    <h1>这里是？</h1>
     <div id="game-description">
-        
+        <p>随着咔嚓一声轻响，比你预想的更顺利，门开了。</p>
+        <p>你走进一个幽暗的石室，墙壁上看起来就要烧光了的蜡烛忽然点燃，借着昏暗的光线，你看到一侧的墙壁上好像有些笔迹？</p>
+    </div>
+    <div>
+        <button onclick="window.location.href='f2.html'">走近墙壁</button>
     </div>
 </body>
 </html>
