--- a/forest.html
+++ b/forest.html
@@ -8,11 +8,12 @@
 <body>
     <h1>神秘森林</h1>
     <div id="game-description">
-        <p>你没有选择任何一条路，而是走进了森林。</p>
         <p>这是一次成功的关于抗拒的尝试，你拒绝了选择，却又将自己置身于无穷的可能性中。</p>
         <p>或许，这才刚刚开始...</p>
     </div>
     <div>
-        <button onclick="window.location.href='f1.html'">四处逛逛</button></div>
+        <button onclick="window.location.href='f0.html'">走向深处</button>
+        <button onclick="window.location.href='index.html'">暂时离开</button>
+    </div>
 </body>
 </html>
