--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="game-description">
         <p>你本来已经入睡。</p>
         <p>
-            你不知道自己为什么会出现在这里，只记得做了一个诡谲的梦，梦里你把钥匙插进一扇大门的锁孔拧动，
+            你不知道自己为什么会出现在这里，只记得做了一个诡谲的梦，梦里你拿着一把金属铜条，像是一把钥匙，你想把它插进一扇大门的锁孔拧动，
             可似乎它们并不匹配，大门没有开，只有忽然刮来的一阵风。风吹过，你醒来...</p>
         <p>
             面前有两条路，四周和头顶是密不透风的森林，偶尔有鸟叫，混杂着那种夜晚特有的万籁俱寂式的窸窸窣窣声。
