--- a/f2.html
+++ b/f2.html
@@ -5,7 +5,8 @@
     <title>神秘森林</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: #f89321; color: white;margin-top: 200px;">
-    <h1>疯狂星期四，V我50！</h1>
+<body style="background-color: #7dc283; color: white;margin-top: 200px;">
+    <h2><s>疯狂星期四，V我50！</s></h1>
+    <h1>祝你春天好。</h1>
 </body>
 </html>
