--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>文字冒险游戏</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>抉 择</h1>
-    <div id="game-description">
-        <p>你本来已经入睡。</p>
-        <p>
-            你不知道自己为什么会出现在这里，只记得做了一个诡谲的梦，梦里你拿着一把金属铜条，像是一把钥匙，你想把它插进一扇大门的锁孔拧动，
-            可似乎它们并不匹配，大门没有开，只有忽然刮来的一阵风。风吹过，你醒来...</p>
-        <p>
-            面前有两条路，四周和头顶是密不透风的森林，偶尔有鸟叫，混杂着那种夜晚特有的万籁俱寂式的窸窸窣窣声。
-            有光从缝隙挤过来，弱不经风的样子让你想起月亮。</p>
-        <p>
-            一种烦躁的情绪滋生，似乎出于对自由的维护，你试图拒绝一切选择，可除非<a href="forest.html">躲进森林</a>
-            ，你想不出别的什么理由能避免在这两条路之间做出尝试。</p>
+    <h1>山谷</h1>
+    <div class="cardIn">
+        <div id="game-description">
+            <p>眼前的苍绿一路延展到山坡上，天上两只白鸟在飞，鸟鸣唤来一阵风，树木从远处开始摇晃它们的枝叶，一路挥舞到你的面前。</p>
+            <p>一条河从右手边的山坡流下，途经你，最后一头扎进森林。据说这里生活着一只<b>会使用语言的动物</b>，你为此来到山谷。</p>
+        </div>
     </div>
 
     <div>
-        <button id="choice1" onclick="makeChoice('left')">向左走</button>
-        <button id="choice2" onclick="makeChoice('right')">向右走</button>
+        <button onclick="window.location.href='A_1.html'">去上游</button>
+        <button onclick="window.location.href='A_2.html'">走下游</button>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
