--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <div class="background"></div>
     <div class="hearts"></div>
     <div class="stars"></div>
-    <div class="message" id="loveMessage"></div>
     <canvas class="fireworks" id="fireworksCanvas"></canvas>
+    <div class="message-container">
+        <div class="welcome-message" id="welcomeMessage"></div>
+        <div class="message" id="loveMessage"></div>
+    </div>
     <button class="button" id="loveButton">点我</button>
     <script src="scripts.js"></script>
 </body>
