--- a/index.html
+++ b/index.html
@@ -18,16 +18,11 @@
     <div class="sparkles"></div>
     <canvas class="fireworks" id="fireworksCanvas"></canvas>
     <div class="message-container">
-        <div class="welcome-message" id="welcomeMessage"></div>
-        <br><br><br><br><br><br><br>
         <div class="message" id="loveMessage"></div>
     </div>
-    <button class="button" id="loveButton">
-        <span class="button-text">点我</span>
-        <span class="button-heart">❤</span>
-    </button>
-    <audio id="clickSound" src="https://assets.mixkit.co/sfx/preview/mixkit-positive-interface-beep-221.mp3" preload="auto"></audio>
-    <audio id="fireworkSound" src="https://assets.mixkit.co/sfx/preview/mixkit-explosion-with-debris-1683.mp3" preload="auto"></audio>
     <script src="scripts.js"></script>
+    <audio autoplay loop>
+    <source src="https://www.aigei.com/music/class/biao_bai/" type="audio/mpeg">
+</audio>
 </body>
 </html>
